# CMake-SFML

./: CMakeLists.txt
src/: main.cpp
